# zero2prod

./: .env  .gitignore  Cargo.toml
.github/workflows/: audit.yml  general.yml  rust.yml
configuration/: base.yaml  local.yaml  production.yaml  test.yaml
migrations/: 20241220135844_create_users_table.sql  20250212165621_create_seed_user.sql  20250530153050_relax_null_checks_on_idempotency.sql  20250531095342_create_newsletters_table.sql  20250531114312_create_newsletter_delivery_queue_table.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  cloneable_auth_token.rs  configuration.rs  email_client.rs  lib.rs  main.rs  newsletter_delivery_worker.rs  session_state.rs  startup.rs  telementry.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  password.rs
src/domain/: mod.rs  newsletter_queue.rs  newsletters.rs  subscriber_email.rs  subscriber_name.rs  users.rs
src/idempotency/: key.rs  mod.rs  persistence.rs
src/routes/: health_check.rs  login.rs  logout.rs  mod.rs  newsletters.rs  password.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: change_password.rs  health_check.rs  helpers.rs  login.rs  logout.rs  main.rs  newsletter.rs  newsletters.rs  subscription_confirm.rs  subscriptions.rs
