[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"


[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.9.0"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
config = "0.14.1"
openssl-sys = "0.9.104"
pkg-config = "0.3.31"
serde = { version = "1.0.214", features = ["derive"] }
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
tokio-macros = "2.4.0"
uuid = { version = "1.11.0", default-features = false, features = ["v4"] }

[dependencies.sqlx]
version = "0.8.*"
default-features = false
features = [
    "runtime-async-std-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
reqwest = "0.12.9"
