[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"


[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.9.0"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
config = "0.14.1"
log = "0.4.22"
once_cell = "1.20.2"
openssl-sys = "0.9.104"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.214", features = ["derive"] }
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
tokio-macros = "2.4.0"
tracing = { version = "0.1.40", default-features = false, features = ["log"] }
tracing-actix-web = "0.7.14"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["env-filter", "registry"] }
uuid = { version = "1.11.0", default-features = false, features = ["v4"] }

[dependencies.sqlx]
version = "0.8.*"
default-features = false
features = [
    "runtime-async-std-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
reqwest = "0.12.9"
