[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.11.0"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
config = "0.14.1"
log = "0.4.22"
once_cell = "1.20.2"
openssl-sys = "0.9.104"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.214", features = ["derive"] }
serde-aux = "4.5.0"
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
tokio-macros = "2.4.0"
tracing = { version = "0.1.40", default-features = false, features = ["log"] }
tracing-actix-web = "0.7.14"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["env-filter", "registry"] }
uuid = { version = "1.11.0", default-features = false, features = ["v4"] }
unicode-segmentation = "1.12.0"
validator = { version = "0.19.0", features = ["derive"] }
rand = { version = "0.8.5", features = ["std_rng"] }
serde_json = "1.0.132"
thiserror = "2.0.3"
anyhow = "1.0.93"
base64 = "0.22.1"
argon2 = { version = "0.5.3", features = ["std"] }
actix-session = { version = "0.10.1", features = ["redis-session-rustls"] }
urlencoding = "2.1.3"
ring = "0.17.8"

[dependencies.sqlx]
version = "0.8.*"
default-features = false
features = [
    "runtime-async-std-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dependencies.reqwest]
version = "0.12.18"
default-features = false
features = ["cookies", "json", "rustls-tls"]

[dev-dependencies]
claims = "0.8.0"
fake = "3.0.1"
tokio = { version = "1.41.0", features = ["rt", "macros"] }
wiremock = "0.6.2"
serde_json = "1.0.132"
linkify = "0.10.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
data-encoding = "2.7.0"
serde_urlencoded = "0.7.1"
